# hulk-compiler

./: .gitignore  Cargo.toml  Makefile  PR_DESCRIPTION.md  README.md  REPORT.md  example.hulk
.github/workflows/: ci.yml
crates/hulk-codegen-llvm/: Cargo.toml
crates/hulk-codegen-llvm/src/: lib.rs
crates/hulk-codegen-llvm/tests/: backend_equality.rs  backend_inheritance_basic.rs  backend_minimal.rs  backend_objects_basic.rs  backend_type_ops.rs  backend_vtables.rs
crates/hulk-driver/: Cargo.toml
crates/hulk-driver/src/: main.rs
crates/hulk-frontend/: Cargo.toml
crates/hulk-frontend/src/: ast.rs  builder.rs  error.rs  lib.rs
crates/hulk-frontend/tests/: ast_builder_expr.rs  control_flow.rs  full_parser.rs  functions_and_blocks.rs  types_frontend.rs
crates/hulk-ir/: Cargo.toml
crates/hulk-ir/src/: lib.rs
crates/hulk-ir/tests/: display.rs
crates/hulk-lexgen/: Cargo.toml  hulk-lexgen.md
crates/hulk-lexgen/docs/: lx.md
crates/hulk-lexgen/src/: lib.rs
crates/hulk-lexgen/tests/: end_to_end.rs  normalize_spec.rs  parse_spec.rs  runtime_lex.rs
crates/hulk-lower/: Cargo.toml
crates/hulk-lower/src/: lib.rs
crates/hulk-parsegen/: Cargo.toml
crates/hulk-sema/: Cargo.toml
docs/: estado_compilador_hulk.md  hir.md  informe_final_hulk_equipo (1).tex  informe_final_hulk_equipo.aux  informe_final_hulk_equipo.out  informe_final_hulk_equipo.tex  informe_final_hulk_equipo.toc  ir.md  report.tex  runtime.md
examples/: demo.hulk
hulk-vscode/: [Content_Types].xml  extension.vsixmanifest
runtime/: hulk_runtime.c  hulk_runtime.h
(+145 files in other folders)
