[workspace]
members = [
    "crates/hulk-lexgen",
    "crates/hulk-parsegen",
    "crates/hulk-frontend",
    "crates/hulk-sema",
    "crates/hulk-ir",
    "crates/hulk-lower",
    "crates/hulk-codegen-llvm",
    "crates/hulk-driver",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Camilo Perez Fleita", "Guillermo Hugues Cardona", "Mauricio Medina Hernandez"]

[workspace.dependencies]
