[package]
name = "hulk-driver"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "hulkc"
path = "src/main.rs"

[dependencies]
hulk-codegen-llvm = { path = "../hulk-codegen-llvm" }
hulk-frontend = { path = "../hulk-frontend" }
hulk-lower    = { path = "../hulk-lower" }
hulk-sema      = { path = "../hulk-sema" }
